syntax = "proto3";

package activities;

service ActivitiesService {
  rpc CreateActivity (CreateActivityRequest) returns (ActivityResponse) {}
  rpc FindAllActivities (PaginationRequest) returns (PaginatedActivitiesResponse) {}
  rpc FindOneActivity (FindOneActivityRequest) returns (ActivityResponse) {}
  rpc UpdateActivity (UpdateActivityRequest) returns (ActivityResponse) {}
  rpc DeleteActivity (DeleteActivityRequest) returns (DeleteActivityResponse) {}
  rpc BulkDeleteActivities (BulkDeleteRequest) returns (BulkDeleteResponse) {}
  rpc BulkUpdateActivities (BulkUpdateRequest) returns (BulkUpdateResponse) {}
}

// Request Messages
message CreateActivityRequest {
  // Required fields
  string activityType = 1;
  string subject = 2;
  string meetingDateTime = 3;
  string duration = 4;
  string status = 5;
  
  // Mutually exclusive: exactly one of leadId or contactId must be provided
  optional string leadId = 6;
  optional string contactId = 7;
  
  // Optional fields
  optional string outcome = 8;
  optional string description = 9;
  optional string dealId = 10;
  optional string accountId = 11;
}

message UpdateActivityRequest {
  string id = 1;
  optional string activityType = 2;
  optional string subject = 3;
  optional string meetingDateTime = 4;
  optional string duration = 5;
  optional string status = 6;
  optional string outcome = 7;
  optional string description = 8;
  optional string leadId = 9;
  optional string contactId = 10;
  optional string dealId = 11;
  optional string accountId = 12;
}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message FindOneActivityRequest {
  string id = 1;
}

message DeleteActivityRequest {
  string id = 1;
}

message BulkDeleteRequest {
  repeated string ids = 1;
}

message BulkUpdateRequest {
  repeated string ids = 1;
  UpdateActivityFields updateFields = 2;
}

message UpdateActivityFields {
  optional string activityType = 1;
  optional string subject = 2;
  optional string meetingDateTime = 3;
  optional string duration = 4;
  optional string status = 5;
  optional string outcome = 6;
  optional string description = 7;
  optional string leadId = 8;
  optional string contactId = 9;
  optional string dealId = 10;
  optional string accountId = 11;
}

// Response Messages
message ActivityResponse {
  string id = 1;
  string activityType = 2;
  string subject = 3;
  string meetingDateTime = 4;
  string duration = 5;
  optional string outcome = 6;
  string status = 7;
  optional string description = 8;
  string createdBy = 9;
  string createdAt = 10;
  optional string leadId = 11;
  optional string contactId = 12;
  optional string dealId = 13;
  optional string accountId = 14;
  optional LeadInfo lead = 15;
  optional ContactInfo contact = 16;
  optional DealInfo deal = 17;
  optional AccountInfo account = 18;
}

message PaginatedActivitiesResponse {
  repeated ActivityResponse data = 1;
  int32 total = 2;
  int32 page = 3;
  int32 lastPage = 4;
}

message DeleteActivityResponse {
  bool success = 1;
}

message BulkDeleteResponse {
  int32 deletedCount = 1;
  repeated FailedId failedIds = 2;
}

message FailedId {
  string id = 1;
  string error = 2;
}

message BulkUpdateResponse {
  int32 updatedCount = 1;
  repeated FailedItem failedItems = 2;
}

message FailedItem {
  string id = 1;
  string error = 2;
}
// Nested Messages
message LeadInfo {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
}

message ContactInfo {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
}

message DealInfo {
  string id = 1;
  string name = 2;
}

message AccountInfo {
  string id = 1;
  string name = 2;
  string accountNumber = 3;
}


